--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-{
-	"page_url": "https://vk.com/angel_crew"
-}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FullGreaM</title>
+    <script type="module" crossorigin src="/assets/index.7c9425a1.js"></script>
+    <link rel="stylesheet" href="/assets/index.a1e83a32.css">
+  </head>
+  <body>
+    <div id="root"></div>
+    
+  </body>
+</html>
