Remove temporary tg channel

--- a/fl_dir/contacts/index.html
+++ b/fl_dir/contacts/index.html
@@ -11,6 +11,6 @@
 	<h2>Паблики, блоги, иные ресурсы</h2>
 	<div class="btn-group" role="group" aria-label="Basic example">
 		<button type="button" class="btn btn-dark btn-outline-light" onclick='fl.goToLocation("https://vk.com/imperium_human")'>Вконтакте</button>
-		<button type="button" class="btn btn-dark btn-outline-light" onclick='fl.goToLocation("https://t.me/FullGreaM")'>Телеграм</button>
+		<!-- <button type="button" class="btn btn-dark btn-outline-light" onclick='fl.goToLocation("https://t.me/FullGreaM")'>Телеграм</button> -->
 	</div>
 </center>
