--- a/fl_dir/contacts/index.html
+++ b/fl_dir/contacts/index.html
@@ -7,6 +7,7 @@
 		<button type="button" class="btn btn-dark btn-outline-light" onclick='fl.goToLocation("https://t.me/Nikiroy78")'>Telegram</button>
 		<button type="button" class="btn btn-dark btn-outline-light">Facebook</button>
 		<button type="button" class="btn btn-dark btn-outline-light" onclick='fl.goToLocation("https://github.com/Nikiroy78")'>GitHub</button>
+		<button type="button" class="btn btn-dark btn-outline-light" onclick='fl.goToLocation("https://gamer-mods.ru/index/8-1000260")'>gamer-mods.ru</button>
 	</div>
 	<h2>Паблики, блоги, иные ресурсы</h2>
 	<div class="btn-group" role="group" aria-label="Basic example">
