--- a/contacts/index.html
+++ b/contacts/index.html
@@ -27,5 +27,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 		<!-- Go to root -->
 		<script>setTimeout(async () => fl.go(window.location.pathname), 50);</script>
+		<script src="/assets/main.js"></script>
 	</body>
 </html>
