--- a/fl_dir/index.html
+++ b/fl_dir/index.html
@@ -8,16 +8,15 @@
 	  </div>
 	  <div class="carousel-inner">
 		<div class="carousel-item active" data-bs-interval="10000">
-		  <img src="/assets/hello/1.png" class="d-block w-100" alt="...">
+		  <img id="main_img1" src="/assets/hello/1.png" class="d-block w-100" alt="...">
 		  <div class="carousel-caption d-none d-md-block">
 			<h5 style="color: white;">Добро пожаловать на мой ресурс</h5>
 			<p style="color: white;">Это официальный ресурс FullGreaM.</p>
 			<button onclick="fl.go('/contacts');" type="button" class="btn btn-dark">Мои контакты</button>
-			<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">Мои контакты</button> -->
 		  </div>
 		</div>
 		<div class="carousel-item" data-bs-interval="2000">
-		  <img src="/assets/hello/2.png" class="d-block w-100" alt="...">
+		  <img id="main_img2" src="/assets/hello/2.png" class="d-block w-100" alt="...">
 		  <div class="carousel-caption d-none d-md-block">
 			<h5 style="color: white;">О проектах и работах</h5>
 			<p style="color: white;">Здесь представлены мои проекты, работы с активными и актуальными ссылками на скачивание.</p>
@@ -25,7 +24,7 @@
 		  </div>
 		</div>
 		<div class="carousel-item">
-		  <img src="/assets/hello/3.png" class="d-block w-100" alt="...">
+		  <img id="main_img3" src="/assets/hello/3.png" class="d-block w-100" alt="...">
 		  <div class="carousel-caption d-none d-md-block">
 			<h5 style="color: white;">О прочей информации</h5>
 			<p style="color: white;">Также здесь представлен (или будет представлен) мой личный блог, а также, блог, касающийся моих проектов или проектов моей команды.</p>
