--- a/fl_dir/index.html
+++ b/fl_dir/index.html
@@ -12,7 +12,8 @@
 		  <div class="carousel-caption d-none d-md-block">
 			<h5 style="color: white;">Добро пожаловать на мой ресурс</h5>
 			<p style="color: white;">Это официальный ресурс FullGreaM.</p>
-			<button onclick="fl.go('/contacts');" type="button" class="btn btn-dark">Мои контакты</button>
+			<button onclick="fl.go('/contacts');" type="button" class="btn btn-outline-light">Мои контакты</button>
+			<div class="centered-el"></div>
 		  </div>
 		</div>
 		<div class="carousel-item" data-bs-interval="2000">
@@ -20,7 +21,8 @@
 		  <div class="carousel-caption d-none d-md-block">
 			<h5 style="color: white;">О проектах и работах</h5>
 			<p style="color: white;">Здесь представлены мои проекты, работы с активными и актуальными ссылками на скачивание.</p>
-			<button onclick="fl.go('/projects');" type="button" class="btn btn-light">Мои проекты</button>
+			<button onclick="fl.go('/projects');" type="button" class="btn btn-outline-light">Мои проекты</button>
+			<div class="centered-el"></div>
 		  </div>
 		</div>
 		<div class="carousel-item">
@@ -28,7 +30,8 @@
 		  <div class="carousel-caption d-none d-md-block">
 			<h5 style="color: white;">О прочей информации</h5>
 			<p style="color: white;">Также здесь представлен (или будет представлен) мой личный блог, а также, блог, касающийся моих проектов или проектов моей команды.</p>
-			<button onclick="fl.go('/blog');" type="button" class="btn btn-secondary">Мой блог</button>
+			<button onclick="fl.go('/blog');" type="button" class="btn btn-outline-light">Мой блог</button>
+			<div class="centered-el"></div>
 		  </div>
 		</div>
 	  </div>
