--- a/contacts/index.html
+++ b/contacts/index.html
@@ -5,12 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 		<link rel="stylesheet" href="/assets/main.css">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 	<title>FullGreaM</title>
 	</head>
 	<body class="bg text-white">
 		<script src="/fl_framework/index.js"></script>
-		<nav class="navbar navbar-dark bg-dark">
+		<nav id="navbar-main" class="navbar navbar-dark bg-dark">
 			<a class="navbar-brand" href="#" onclick="fl.go('/');">
 				FullGreaM
 			</a>
@@ -26,7 +25,7 @@
 		<!-- Finalize loading bootstrap js -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 		<!-- Go to root -->
-		<script>setTimeout(async () => fl.go(window.location.pathname), 50);</script>
+		<!-- <script>setTimeout(async () => fl.go(window.location.pathname), 50);</script> -->
 		<script src="/assets/main.js"></script>
 	</body>
 </html>
