--- a/fl_dir/index.html
+++ b/fl_dir/index.html
@@ -8,7 +8,7 @@
 	  </div>
 	  <div class="carousel-inner">
 		<div class="carousel-item active" data-bs-interval="10000">
-		  <img id="main_img1" src="/assets/hello/1.gif" class="d-block w-100" alt="...">
+		  <img id="main_img1" src="/assets/hello/1.webp" class="d-block w-100" alt="...">
 		  <div class="carousel-caption d-none d-md-block">
 			<h5 style="color: white;">Добро пожаловать на мой ресурс</h5>
 			<p style="color: white;">Это официальный ресурс FullGreaM.</p>
